# serializer version: 1
# name: test_entities[number.bathroom_b_loop_cooling_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bathroom_b_loop_cooling_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop cooling offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop cooling offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_cool',
    'unique_id': '123456789012_1.4_loop_b_offset_cool',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bathroom_b_loop_cooling_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom B-loop cooling offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bathroom_b_loop_cooling_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_entities[number.bathroom_b_loop_heating_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bathroom_b_loop_heating_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop heating offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop heating offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_heat',
    'unique_id': '123456789012_1.4_loop_b_offset_heat',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bathroom_b_loop_heating_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom B-loop heating offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bathroom_b_loop_heating_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_entities[number.bathroom_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bathroom_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cool_setpoint',
    'unique_id': '123456789012_1.4_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bathroom_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom Cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bathroom_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_entities[number.bathroom_eco_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bathroom_eco_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_cool_setpoint',
    'unique_id': '123456789012_1.4_eco_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bathroom_eco_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom Eco cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bathroom_eco_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_entities[number.bathroom_eco_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bathroom_eco_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_heat_setpoint',
    'unique_id': '123456789012_1.4_eco_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bathroom_eco_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom Eco heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bathroom_eco_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_entities[number.bathroom_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bathroom_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heat_setpoint',
    'unique_id': '123456789012_1.4_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bathroom_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom Heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bathroom_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22.0',
  })
# ---
# name: test_entities[number.bathroom_setpoint_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bathroom_setpoint_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Setpoint limit',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'Setpoint limit',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'setpoint_limit',
    'unique_id': '123456789012_1.4_setpoint_limit',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bathroom_setpoint_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom Setpoint limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bathroom_setpoint_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_entities[number.bedroom_b_loop_cooling_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bedroom_b_loop_cooling_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop cooling offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop cooling offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_cool',
    'unique_id': '123456789012_1.3_loop_b_offset_cool',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bedroom_b_loop_cooling_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom B-loop cooling offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bedroom_b_loop_cooling_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_entities[number.bedroom_b_loop_heating_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bedroom_b_loop_heating_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop heating offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop heating offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_heat',
    'unique_id': '123456789012_1.3_loop_b_offset_heat',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bedroom_b_loop_heating_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom B-loop heating offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bedroom_b_loop_heating_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_entities[number.bedroom_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bedroom_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cool_setpoint',
    'unique_id': '123456789012_1.3_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bedroom_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bedroom_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '26.0',
  })
# ---
# name: test_entities[number.bedroom_eco_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bedroom_eco_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_cool_setpoint',
    'unique_id': '123456789012_1.3_eco_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bedroom_eco_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Eco cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bedroom_eco_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_entities[number.bedroom_eco_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bedroom_eco_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_heat_setpoint',
    'unique_id': '123456789012_1.3_eco_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bedroom_eco_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Eco heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bedroom_eco_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_entities[number.bedroom_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bedroom_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heat_setpoint',
    'unique_id': '123456789012_1.3_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bedroom_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bedroom_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.0',
  })
# ---
# name: test_entities[number.bedroom_setpoint_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.bedroom_setpoint_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Setpoint limit',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'Setpoint limit',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'setpoint_limit',
    'unique_id': '123456789012_1.3_setpoint_limit',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.bedroom_setpoint_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Setpoint limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.bedroom_setpoint_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_entities[number.kitchen_b_loop_cooling_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_b_loop_cooling_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop cooling offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop cooling offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_cool',
    'unique_id': '123456789012_1.2_loop_b_offset_cool',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.kitchen_b_loop_cooling_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen B-loop cooling offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_b_loop_cooling_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_entities[number.kitchen_b_loop_heating_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_b_loop_heating_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop heating offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop heating offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_heat',
    'unique_id': '123456789012_1.2_loop_b_offset_heat',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.kitchen_b_loop_heating_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen B-loop heating offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_b_loop_heating_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_entities[number.kitchen_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cool_setpoint',
    'unique_id': '123456789012_1.2_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.kitchen_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_entities[number.kitchen_eco_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_eco_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_cool_setpoint',
    'unique_id': '123456789012_1.2_eco_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.kitchen_eco_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Eco cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_eco_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '26.5',
  })
# ---
# name: test_entities[number.kitchen_eco_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_eco_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_heat_setpoint',
    'unique_id': '123456789012_1.2_eco_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.kitchen_eco_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Eco heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_eco_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '19.0',
  })
# ---
# name: test_entities[number.kitchen_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heat_setpoint',
    'unique_id': '123456789012_1.2_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.kitchen_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.5',
  })
# ---
# name: test_entities[number.kitchen_setpoint_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_setpoint_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Setpoint limit',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'Setpoint limit',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'setpoint_limit',
    'unique_id': '123456789012_1.2_setpoint_limit',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.kitchen_setpoint_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Setpoint limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_setpoint_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_entities[number.living_room_b_loop_cooling_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.living_room_b_loop_cooling_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop cooling offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop cooling offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_cool',
    'unique_id': '123456789012_1.1_loop_b_offset_cool',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.living_room_b_loop_cooling_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room B-loop cooling offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.living_room_b_loop_cooling_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_entities[number.living_room_b_loop_heating_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.living_room_b_loop_heating_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop heating offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop heating offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_heat',
    'unique_id': '123456789012_1.1_loop_b_offset_heat',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.living_room_b_loop_heating_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room B-loop heating offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.living_room_b_loop_heating_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_entities[number.living_room_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.living_room_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cool_setpoint',
    'unique_id': '123456789012_1.1_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.living_room_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room Cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.living_room_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_entities[number.living_room_eco_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.living_room_eco_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_cool_setpoint',
    'unique_id': '123456789012_1.1_eco_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.living_room_eco_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room Eco cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.living_room_eco_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_entities[number.living_room_eco_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.living_room_eco_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_heat_setpoint',
    'unique_id': '123456789012_1.1_eco_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.living_room_eco_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room Eco heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.living_room_eco_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22.5',
  })
# ---
# name: test_entities[number.living_room_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.living_room_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heat_setpoint',
    'unique_id': '123456789012_1.1_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.living_room_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room Heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.living_room_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22.5',
  })
# ---
# name: test_entities[number.living_room_setpoint_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.living_room_setpoint_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Setpoint limit',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'Setpoint limit',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'setpoint_limit',
    'unique_id': '123456789012_1.1_setpoint_limit',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.living_room_setpoint_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room Setpoint limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.living_room_setpoint_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_entities[number.office_b_loop_cooling_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.office_b_loop_cooling_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop cooling offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop cooling offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_cool',
    'unique_id': '123456789012_1.5_loop_b_offset_cool',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.office_b_loop_cooling_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office B-loop cooling offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.office_b_loop_cooling_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_entities[number.office_b_loop_heating_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.office_b_loop_heating_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'B-loop heating offset',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'B-loop heating offset',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loop_b_offset_heat',
    'unique_id': '123456789012_1.5_loop_b_offset_heat',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.office_b_loop_heating_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office B-loop heating offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.office_b_loop_heating_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_entities[number.office_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.office_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cool_setpoint',
    'unique_id': '123456789012_1.5_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.office_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office Cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 16.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.office_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '26.0',
  })
# ---
# name: test_entities[number.office_eco_cooling_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.office_eco_cooling_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco cooling setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco cooling setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_cool_setpoint',
    'unique_id': '123456789012_1.5_eco_cool_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.office_eco_cooling_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office Eco cooling setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 35.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.office_eco_cooling_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_entities[number.office_eco_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.office_eco_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Eco heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Eco heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_heat_setpoint',
    'unique_id': '123456789012_1.5_eco_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.office_eco_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office Eco heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 27.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 7.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.office_eco_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.0',
  })
# ---
# name: test_entities[number.office_heating_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.office_heating_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating setpoint',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heat_setpoint',
    'unique_id': '123456789012_1.5_heat_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.office_heating_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office Heating setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.office_heating_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22.5',
  })
# ---
# name: test_entities[number.office_setpoint_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.office_setpoint_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Setpoint limit',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'Setpoint limit',
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'setpoint_limit',
    'unique_id': '123456789012_1.5_setpoint_limit',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.office_setpoint_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office Setpoint limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.office_setpoint_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
